--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:300,300i,700,900');
 @import "radio.scss";
 @import "loader.scss";
 $base-duration: 500ms;
@@ -39,12 +38,12 @@ $lg: new-breakpoint(min-width 1024px);
 	box-sizing: border-box;
 	outline: none;
 }
-body { margin:0; padding:0; font-family: 'Montserrat', sans-serif; font-weight: lighter; overflow: hidden; background-color: lighten( $color-5, 65% )}
-header{width: 100%; display: flex;}
-main {position: relative; width: 100%;}
-h1,h2,h3,h4,h5{font-weight: bold}
-img{width: 100%;}
 // ====================== mobile ============================
+#app-container{
+	height: calc(100vh - 5em);
+	position: relative;
+	overflow: hidden;
+}
 #alert-overlay, #drill-down-overlay, #initial-loader-overlay{
 	display: none;
 
@@ -62,7 +61,8 @@ img{width: 100%;}
   }
 }
 #user-type-section.active{
-  position: absolute;
+	position: absolute;
+	z-index: 5;
   bottom: 0;
   display: flex;
   width: 100vw;
@@ -187,15 +187,6 @@ img{width: 100%;}
 		}
 	}
 }
-.search{
-	width: 3em;
-	padding: .5em;
-	display: flex;
-
-	img{
-		margin: auto;
-	}
-}
 ul {
   list-style: none;
 }
@@ -221,23 +212,12 @@ ul {
 }
 // ======================= header end =====================
 // ======================== main ==========================
-.container {
-	width: 75%;
-	margin: 0 auto;
-}
-
-section.application.hidden{
-  top: 100vh;
-  transition: all $base-duration ease;
-}
-
 section.application {
-	padding-top: 5em;
 	position: relative;
 	display: flex;
 	align-items: stretch;
-	width: 100%;
-	height: 100vh;
+	width: 100vw;
+	height: 100%;
 	transform: translateX(0px);
 	transition: all $base-duration ease;
 	z-index: 0;
@@ -261,7 +241,7 @@ section.application {
 
 		.group{
 			position: relative;
-			padding: .5em;
+			padding: 1em .5em .5em .5em;
 			border: .1em solid $color-1;
 			margin-bottom: 1em;
 
@@ -270,6 +250,25 @@ section.application {
 				padding: .1em;
 				background-color: lighten( $color-5, 65% );
 				top: -.75em;
+			}
+
+			.sub-group{
+				margin: 1em auto;
+
+				.btn.resource{
+					padding: .5em;
+					background-color: $color-2;
+					color: $color-1;
+					text-decoration: none;
+					transition: all .2s ease-in-out;
+				}
+
+				.btn.resource:hover{
+					background-color: $color-1;
+					color: $color-2;
+					text-decoration: none;
+					transition: all .2s ease-in-out;
+				}
 			}
 		}
 	}
