connecting filter and calculator panel

--- a/sass/radio.scss
+++ b/sass/radio.scss
@@ -15,6 +15,7 @@ $color-6: #FF625B;
 {
     position: relative;
     padding-left: 28px;
+    padding-top: .4em;
     cursor: pointer;
     line-height: 20px;
     display: inline-block;
