--- a/sass/calculator.scss
+++ b/sass/calculator.scss
@@ -1,5 +1,3 @@
-$base-duration: 500ms;
-$cubic: cubic-bezier(.64,.09,.08,1);
 // Colors
 $color-1: #004544;
 $color-2: #9fd5b3;
@@ -24,5 +22,14 @@ form{
     }
     .logic-section.active{
         display: block;
+    }
+
+    #submit-btn{
+        margin-right: 2em;
+    }
+
+    #cancel-btn{
+        background-color: $color-4;
+        color: $white;
     }
 }
