--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -283,7 +283,7 @@ section.application {
 		transition: all .2s ease-in-out;
 	}
 
-	.close-panel-btn{
+	.close-btn{
 		position: absolute;
 		top: 1em;
 		right: 1em;
@@ -319,23 +319,26 @@ section.application {
   }
 	.map-panel{
 		display: block;
-    position: relative;
+		position: relative;
+		overflow: hidden;
 		flex: 1;
 
 		.calculator, .filters{
-			display: none;
-		}
-
-		.filters.active{
 			display: block;
 			position: absolute;
 			top: 0;
-			left: 0;
+			left: -26em;
 			width: 25em;
 			height: 100%;
 			padding: 1em;
 			background-color: #eaeaea;
 			box-shadow: -2px 2px 10px 1px rgba(0, 69, 68, 0.5);
+			transition: all .2s ease-in-out;
+		}
+
+		.filters.active{
+			left: 0;
+			transition: all .2s ease-in-out;
 
 			h2{
 				margin: 0;
@@ -343,15 +346,8 @@ section.application {
 		}
 
 		.calculator.active{
-			display: block;
-			position: absolute;
-			top: 0;
 			left: 0;
-			width: 25em;
-			height: 100%;
-			padding: 1em;
-			background-color: #eaeaea;
-			box-shadow: -2px 2px 10px 1px rgba(0, 69, 68, 0.5);
+			transition: all .2s ease-in-out;
 		}
 
 		#geocoder{
@@ -368,8 +364,9 @@ section.application {
 
 		#filters{
 			position: absolute;
-			bottom: 4em;
-			right: 3em;
+			bottom: 2em;
+			right: 2em;
+			font-size: 1em;
 		}
 
     #legend.active{
