--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -330,9 +330,12 @@ section.application {
 		.calculator, .filters{
 			display: block;
 			position: absolute;
+			z-index: 5;
+			overflow-y: auto;
 			top: 0;
 			left: -26em;
 			width: 25em;
+			max-width: 100vw;
 			height: 100%;
 			padding: 1em;
 			background-color: #eaeaea;
@@ -369,6 +372,34 @@ section.application {
 				background-color: $color-4;
 				color: $white;
 			}
+
+			.legend.active{
+				display: block;
+				padding: .5em 1em;
+				border: solid .25em $color-1;
+
+				p:first-child{
+					span{
+						background: $color-1;
+						color: $color-1;
+						padding: 0.2em .5em;
+						border-radius: 50%;
+						margin-right: .5em;
+					}
+				}
+				p:nth-child(2){
+					span{
+						background: $color-3;
+						color: $color-3;
+						padding: 0.2em .5em;
+						border-radius: 50%;
+						margin-right: .5em;
+					}
+				}
+			}
+			.legend{
+				display: none;
+			}
 		}
 
 		.calculator.active{
@@ -382,7 +413,7 @@ section.application {
 
 		#geocoder{
 			position: absolute;
-			top: 2em;
+			top: 1em;
 			right: 2em;
 		}
 
@@ -398,32 +429,6 @@ section.application {
 			right: 2em;
 			font-size: 1em;
 		}
-
-    #legend.active{
-      display: block;
-      position: absolute;
-      top: 4em;
-      left: 2em;
-      width: 25em;
-      z-index: 2;
-
-      strong{
-        background-color: rgba(255,255,255,.7);
-      }
-      .legend label,
-      .legend span {
-        background-color: rgba(255,255,255,.7);
-        display:block;
-        float:left;
-        height:15px;
-        width:25%;
-        text-align:center;
-        font-size:.75em;
-      }
-    }
-    #legend{
-      display: none;
-    }
 	}
 }
 // ===================== main end =========================
