change labels and buttons

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -376,6 +376,14 @@ section.application {
 				margin-bottom: 1em;
 			}
 
+			#population-description{
+				padding-left: 2.1em;
+			}
+
+			input, select{
+				width: 10em;
+			}
+
 			article{
 				margin-bottom: 1em;
 			}
