--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -87,3 +87,13 @@
 		}
 	}
 }
+#filters{
+    z-index: 10001;
+    background-color: $color-4;
+    color: $white;
+    position: absolute;
+    top: .5em;
+    right: 3em;
+    font-size: 1.25em;
+    cursor: pointer;
+}
