--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -18,7 +18,7 @@ $cubic: cubic-bezier(.64,.09,.08,1);
     #welcome-panel.active{
         position: absolute;
         z-index: 1005;
-        bottom: 0;
+        top: 5em;
         display: flex;
         width: 100vw;
         transition: all 5s ease-in-out;
@@ -164,12 +164,14 @@ $cubic: cubic-bezier(.64,.09,.08,1);
 	}
 }
 #filters{
-    z-index: 1001;
-    background-color: $color-4;
-    color: $white;
-    position: absolute;
-    top: .5em;
-    right: 3em;
-    font-size: 1.25em;
-    cursor: pointer;
+  border: none;
+  padding: .5em;
+  z-index: 1001;
+  background-color: $color-4;
+  color: $white;
+  position: absolute;
+  top: .5em;
+  right: 3em;
+  font-size: 1.25em;
+  cursor: pointer;
 }
